--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a class="nav-link text-white" href="html/inspiration.html">Film examples</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contact</a>
+                        <a class="nav-link text-white" href="html/contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
