--- a/html/contact.html
+++ b/html/contact.html
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="#">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="../html/cameraslenses.html">Cameras & lenses</a>
+                    </li>
                 </ul>
             </div>
         </div>
