--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="html/contact.html">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="html/cameraslenses.html">Cameras & lenses</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -175,7 +178,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <script src="../vivafilm/js/main.js"></script>
 </body>
 
 </html>
