--- a/html/cameraslenses.html
+++ b/html/cameraslenses.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../html/">Film examples</a>
+                        <a class="nav-link text-white" href="../html/inspiration.html">Film examples</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="../html/contact.html">Contact</a>
