--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <p class="fs-2 text-center" style="margin-top: 20px;">New arrivals</p>
-
+<a href="html/cameraslenses.html">
     <div class="container text-center">
         <div class="row">
             <div class="col-md-4 col-sm-6">
@@ -53,7 +53,9 @@
                         <p class="card-text">Cameras & Lenses</p>
                     </div>
                 </div>
+            </a>
             </div>
+     
 
             <div class="col-md-4 col-sm-6">
                 <div class="card h-100 border-0">
