--- a/html/cameraslenses.html
+++ b/html/cameraslenses.html
@@ -57,7 +57,7 @@
                 <!-- Contenido del segundo card -->
                 <img class="group list-group-image" src="../img/contaxaria.jpg" alt="" />
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Contax g1 - green label -</h4>
+                    <h4 class="group inner list-group-item-heading">Contax Aria - body -</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
