--- a/html/cameraslenses.html
+++ b/html/cameraslenses.html
@@ -35,7 +35,7 @@
     </nav>
 
     <div class="container">
-        <div class="d-flex flex-wrap justify-content-between">
+        <div class="d-flex flex-wrap justify-content-center">
             <div class="item col-xs-4 col-lg-4">
                 <!-- Contenido del primer card -->
                 <img class="group list-group-image" src="../img/contaxg1.jpg.jpg" alt="" />
