--- a/html/cameraslenses.html
+++ b/html/cameraslenses.html
@@ -36,7 +36,7 @@
 
     <div class="container">
         <div class="d-flex flex-wrap justify-content-center">
-            <div class="item col-xs-4 col-lg-4">
+            <div class="item col-md-6 col-lg-4">
                 <!-- Contenido del primer card -->
                 <img class="group list-group-image" src="../img/contaxg1.jpg.jpg" alt="" />
                 <div class="caption">
@@ -53,7 +53,7 @@
                 </div>
             </div>
 
-            <div class="item col-xs-4 col-lg-4">
+            <div class="item col-md-6 col-lg-4">
                 <!-- Contenido del segundo card -->
                 <img class="group list-group-image" src="../img/contaxaria.jpg" alt="" />
                 <div class="caption">
@@ -70,7 +70,7 @@
                 </div>
             </div>
 
-            <div class="item col-xs-4 col-lg-4">
+            <div class="item col-md-6 col-lg-4">
                 <!-- Contenido del tercer card -->
                 <img class="group list-group-image" src="../img/nikon35ti.jpg" alt="" />
                 <div class="caption">
@@ -88,7 +88,7 @@
             </div>
 
             <!-- Repite la estructura para más cards -->
-            <div class="item col-xs-4 col-lg-4">
+            <div class="item col-md-6 col-lg-4">
                 <!-- Contenido del tercer card -->
                 <img class="group list-group-image" src="../img/leica m3 body.JPG" alt="" />
                 <div class="caption">
@@ -104,7 +104,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item col-xs-4 col-lg-4">
+            <div class="item col-md-6 col-lg-4">
                 <!-- Contenido del tercer card -->
                 <img class="group list-group-image" src="../img/zeissbiogon.JPG" alt="" />
                 <div class="caption">
@@ -120,7 +120,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item col-xs-4 col-lg-4">
+            <div class="item col-md-6 col-lg-4">
                 <!-- Contenido del tercer card -->
                 <img class="group list-group-image" src="../img/leica elmar.JPG" alt="" />
                 <div class="caption">
