--- a/html/cameraslenses.html
+++ b/html/cameraslenses.html
@@ -36,24 +36,24 @@
 
     <div class="container">
         <div class="d-flex flex-wrap justify-content-center">
-            <div class="item col-md-6 col-lg-4">
+            <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del primer card -->
                 <img class="group list-group-image" src="../img/contaxg1.jpg.jpg" alt="" />
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Contax g1 - green label -</h4>
+                    <h4 class="group inner list-group-item-heading">Contax g1 - Gl -</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
                             <p class="lead">$21.000</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
+                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="item col-md-6 col-lg-4">
+            <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del segundo card -->
                 <img class="group list-group-image" src="../img/contaxaria.jpg" alt="" />
                 <div class="caption">
@@ -64,74 +64,74 @@
                             <p class="lead">$21.000</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
+                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="item col-md-6 col-lg-4">
+            <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del tercer card -->
                 <img class="group list-group-image" src="../img/nikon35ti.jpg" alt="" />
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Contax g1 - green label -</h4>
+                    <h4 class="group inner list-group-item-heading">Nikon 35ti -</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
                             <p class="lead">$21.000</p>
                         </div>
-                        <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
+                        <div class="col-xs-12 col-md-6 mb-3">
+                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
                         </div>
                     </div>
                 </div>
             </div>
 
             <!-- Repite la estructura para más cards -->
-            <div class="item col-md-6 col-lg-4">
+            <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del tercer card -->
                 <img class="group list-group-image" src="../img/leica m3 body.JPG" alt="" />
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Contax g1 - green label -</h4>
+                    <h4 class="group inner list-group-item-heading">Leica m3 body -</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
                             <p class="lead">$21.000</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
+                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="item col-md-6 col-lg-4">
+            <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del tercer card -->
                 <img class="group list-group-image" src="../img/zeissbiogon.JPG" alt="" />
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Contax g1 - green label -</h4>
+                    <h4 class="group inner list-group-item-heading">C zeiss Biogon -</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
                             <p class="lead">$21.000</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
+                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="item col-md-6 col-lg-4">
+            <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del tercer card -->
                 <img class="group list-group-image" src="../img/leica elmar.JPG" alt="" />
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Contax g1 - green label -</h4>
+                    <h4 class="group inner list-group-item-heading">Leica Elmar -</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
                             <p class="lead">$21.000</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
+                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
                         </div>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
     <footer class="bg-black text-white text-center py-3">
         <div class="container-md">
             <p>&copy; 2023 Viva Film. All rights reserved.</p>
-            <p>Designed by Your Name</p>
+            <p>Designed with love</p>
         </div>
     </footer>
 
