--- a/html/cameraslenses.html
+++ b/html/cameraslenses.html
@@ -57,7 +57,7 @@
                 <!-- Contenido del segundo card -->
                 <img class="group list-group-image" src="../img/contaxaria.jpg" alt="" />
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Contax Aria - body -</h4>
+                    <h4 class="group inner list-group-item-heading">Contax Aria</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
@@ -74,7 +74,7 @@
                 <!-- Contenido del tercer card -->
                 <img class="group list-group-image" src="../img/nikon35ti.jpg" alt="" />
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Nikon 35ti -</h4>
+                    <h4 class="group inner list-group-item-heading">Nikon 35ti</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
@@ -92,7 +92,7 @@
                 <!-- Contenido del tercer card -->
                 <img class="group list-group-image" src="../img/leica m3 body.JPG" alt="" />
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Leica m3 body -</h4>
+                    <h4 class="group inner list-group-item-heading">Leica m3 body</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
@@ -108,7 +108,7 @@
                 <!-- Contenido del tercer card -->
                 <img class="group list-group-image" src="../img/zeissbiogon.JPG" alt="" />
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">C zeiss Biogon -</h4>
+                    <h4 class="group inner list-group-item-heading">C zeiss Biogon</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
@@ -124,7 +124,7 @@
                 <!-- Contenido del tercer card -->
                 <img class="group list-group-image" src="../img/leica elmar.JPG" alt="" />
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Leica Elmar -</h4>
+                    <h4 class="group inner list-group-item-heading">Leica Elmar</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
