--- a/html/cameraslenses.html
+++ b/html/cameraslenses.html
@@ -38,7 +38,9 @@
         <div class="d-flex flex-wrap justify-content-center">
             <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del primer card -->
+                <a href="../img/contaxg1.jpg.jpg" data-bs-toggle="modal" data-bs-target="#modal1">
                 <img class="group list-group-image" src="../img/contaxg1.jpg.jpg" alt="" />
+            </a>
                 <div class="caption">
                     <h4 class="group inner list-group-item-heading">Contax g1 - Gl -</h4>
                     <p class="group inner list-group-item-text"></p>
@@ -53,9 +55,12 @@
                 </div>
             </div>
 
+
             <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del segundo card -->
+                <a href="../img/contaxaria.jpg" data-bs-toggle="modal" data-bs-target="#modal2">
                 <img class="group list-group-image" src="../img/contaxaria.jpg" alt="" />
+            </a>
                 <div class="caption">
                     <h4 class="group inner list-group-item-heading">Contax Aria</h4>
                     <p class="group inner list-group-item-text"></p>
@@ -138,6 +143,32 @@
             </div>
             
 
+        </div>
+    </div>
+                <!-- Modal 1 -->
+
+    <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <img src="../img/contaxg1.jpg.jpg" class="img-fluid" alt="Contax G1">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <img src="../img/contaxaria.jpg" class="img-fluid" alt="Contax aria">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
         </div>
     </div>
 
