--- a/html/cameraslenses.html
+++ b/html/cameraslenses.html
@@ -77,7 +77,9 @@
 
             <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del tercer card -->
-                <img class="group list-group-image" src="../img/nikon35ti.jpg" alt="" />
+                <a href="../img/nikon35ti.jpg" data-bs-toggle="modal" data-bs-target="#modal3">
+                 <img class="group list-group-image" src="../img/nikon35ti.jpg" alt="" />
+                </a>
                 <div class="caption">
                     <h4 class="group inner list-group-item-heading">Nikon 35ti</h4>
                     <p class="group inner list-group-item-text"></p>
@@ -91,11 +93,11 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Repite la estructura para más cards -->
-            <div class="item col-md-6 col-lg-4 mb-3">
-                <!-- Contenido del tercer card -->
+            <!-- Contenido del cuarto card -->
+            <div class="item col-md-6 col-lg-4 mb-3">               
+                <a href="../img/leica m3 body.JPG" data-bs-toggle="modal" data-bs-target="#modal4">
                 <img class="group list-group-image" src="../img/leica m3 body.JPG" alt="" />
+            </a>
                 <div class="caption">
                     <h4 class="group inner list-group-item-heading">Leica m3 body</h4>
                     <p class="group inner list-group-item-text"></p>
@@ -110,8 +112,10 @@
                 </div>
             </div>
             <div class="item col-md-6 col-lg-4 mb-3">
-                <!-- Contenido del tercer card -->
-                <img class="group list-group-image" src="../img/zeissbiogon.JPG" alt="" />
+                <!-- Contenido del quinto card -->
+                <a href="../img/zeissbiogon.JPG" data-bs-toggle="modal" data-bs-target="#modal5">
+            <img class="group list-group-image" src="../img/zeissbiogon.JPG" alt="" />
+        </a>
                 <div class="caption">
                     <h4 class="group inner list-group-item-heading">C zeiss Biogon</h4>
                     <p class="group inner list-group-item-text"></p>
@@ -126,8 +130,10 @@
                 </div>
             </div>
             <div class="item col-md-6 col-lg-4 mb-3">
-                <!-- Contenido del tercer card -->
+                <!-- Contenido del sexto card -->
+                <a href="../img/leica elmar.JPG" data-bs-toggle="modal" data-bs-target="#modal6">
                 <img class="group list-group-image" src="../img/leica elmar.JPG" alt="" />
+            </a>
                 <div class="caption">
                     <h4 class="group inner list-group-item-heading">Leica Elmar</h4>
                     <p class="group inner list-group-item-text"></p>
@@ -146,32 +152,86 @@
         </div>
     </div>
                 <!-- Modal 1 -->
-
-    <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <img src="../img/contaxg1.jpg.jpg" class="img-fluid" alt="Contax G1">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
+<div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="../img/contaxg1.jpg.jpg" class="img-fluid" alt="Contax G1">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
-    <div class="modal fade" id="modal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <img src="../img/contaxaria.jpg" class="img-fluid" alt="Contax aria">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
+</div>
+
+<!-- Modal 2 -->
+<div class="modal fade" id="modal2" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="../img/contaxaria.jpg" class="img-fluid" alt="Contax aria">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
+</div>
 
+<!-- Modal 3 -->
+<div class="modal fade" id="modal3" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="../img/nikon35ti.jpg" class="img-fluid" alt="Nikon 35ti">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--Modal 4-->
+<div class="modal fade" id="modal4" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="../img/leica m3 body.JPG" class="img-fluid" alt="leica m3">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--Modal 5-->
+<div class="modal fade" id="modal5" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="../img/zeissbiogon.JPG" class="img-fluid" alt="zeissbiogon">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--Modal 6-->
+<div class="modal fade" id="modal6" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="../img/leica elmar.JPG" class="img-fluid" alt="Leica elmar">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--Footer-->
     <footer class="bg-black text-white text-center py-3">
         <div class="container-md">
             <p>&copy; 2023 Viva Film. All rights reserved.</p>
