--- a/html/secondhand.html
+++ b/html/secondhand.html
@@ -29,109 +29,123 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="../html/cameraslenses.html">Cameras & lenses</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="html/secondhand.html">Second hand</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <div class="container">
-        <div class="d-flex flex-wrap justify-content-between">
-            <div class="item col-xs-4 col-lg-4">
+        <div class="d-flex flex-wrap justify-content-center">
+            <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del primer card -->
-                <img class="group list-group-image" src="../img/contaxg1.jpg.jpg" alt="" />
+                <a href="../img/d hand/Pentax espio mini.JPG" data-bs-toggle="modal" data-bs-target="#modal1">
+                <img class="group list-group-image" src="../img/d hand/Pentax espio mini.JPG" alt="" />
+            </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Contax g1 - green label -</h4>
+                    <h4 class="group inner list-group-item-heading">Pentax espio mini</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
                             <p class="lead">$21.000</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
+                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="item col-xs-4 col-lg-4">
+
+            <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del segundo card -->
-                <img class="group list-group-image" src="../img/contaxaria.jpg" alt="" />
+                <a href="../img/d hand/rollei 35t.jpg" data-bs-toggle="modal" data-bs-target="#modal2">
+                <img class="group list-group-image" src="../img/d hand/rollei 35t.jpg" alt="" />
+            </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Contax g1 - green label -</h4>
+                    <h4 class="group inner list-group-item-heading">Rollei 35T</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
                             <p class="lead">$21.000</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
+                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="item col-xs-4 col-lg-4">
+            <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del tercer card -->
-                <img class="group list-group-image" src="../img/nikon35ti.jpg" alt="" />
+                <a href="../img/d hand/plaubel makina.jpg" data-bs-toggle="modal" data-bs-target="#modal3">
+                 <img class="group list-group-image" src="../img/d hand/plaubel makina.jpg" alt="" />
+                </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Contax g1 - green label -</h4>
+                    <h4 class="group inner list-group-item-heading">Plaubel Makina</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
                             <p class="lead">$21.000</p>
                         </div>
-                        <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
+                        <div class="col-xs-12 col-md-6 mb-3">
+                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <!-- Repite la estructura para más cards -->
-            <div class="item col-xs-4 col-lg-4">
-                <!-- Contenido del tercer card -->
-                <img class="group list-group-image" src="../img/leica m3 body.JPG" alt="" />
+            <!-- Contenido del cuarto card -->
+            <div class="item col-md-6 col-lg-4 mb-3">               
+                <a href="../img/d hand/summaron 35mm.jpg" data-bs-toggle="modal" data-bs-target="#modal4">
+                <img class="group list-group-image" src="../img/d hand/summaron 35mm.jpg" alt="" />
+            </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Contax g1 - green label -</h4>
+                    <h4 class="group inner list-group-item-heading">Summaron 35mm</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
                             <p class="lead">$21.000</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
+                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="item col-xs-4 col-lg-4">
-                <!-- Contenido del tercer card -->
-                <img class="group list-group-image" src="../img/zeissbiogon.JPG" alt="" />
+            <div class="item col-md-6 col-lg-4 mb-3">
+                <!-- Contenido del quinto card -->
+                <a href="../img/d hand/summicron 35mm.JPG" data-bs-toggle="modal" data-bs-target="#modal5">
+            <img class="group list-group-image" src="../img/d hand/summicron 35mm.JPG" alt="" />
+        </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Contax g1 - green label -</h4>
+                    <h4 class="group inner list-group-item-heading">Summicron 35mm</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
                             <p class="lead">$21.000</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
+                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="item col-xs-4 col-lg-4">
-                <!-- Contenido del tercer card -->
-                <img class="group list-group-image" src="../img/leica elmar.JPG" alt="" />
+            <div class="item col-md-6 col-lg-4 mb-3">
+                <!-- Contenido del sexto card -->
+                <a href="../img/d hand/fuji tiara.jpeg" data-bs-toggle="modal" data-bs-target="#modal6">
+                <img class="group list-group-image" src="../img/d hand/fuji tiara.jpeg" alt="" />
+            </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Contax g1 - green label -</h4>
+                    <h4 class="group inner list-group-item-heading">Fuji Tiara</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
                             <p class="lead">$21.000</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
+                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
                         </div>
                     </div>
                 </div>
@@ -140,11 +154,91 @@
 
         </div>
     </div>
+                <!-- Modal 1 -->
+<div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="../img/d hand/Pentax espio mini.JPG" class="img-fluid" alt="Pentax espio mini">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 
+<!-- Modal 2 -->
+<div class="modal fade" id="modal2" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="../img/d hand/rollei 35t.jpg" class="img-fluid" alt="Rollei 35">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal 3 -->
+<div class="modal fade" id="modal3" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="../img/d hand/plaubel makina.jpg" class="img-fluid" alt="Nikon 35ti">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--Modal 4-->
+<div class="modal fade" id="modal4" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="../img/d hand/summaron 35mm.jpg" class="img-fluid" alt="leica m3">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--Modal 5-->
+<div class="modal fade" id="modal5" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="../img/d hand/summicron 35mm.JPG" class="img-fluid" alt="zeissbiogon">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--Modal 6-->
+<div class="modal fade" id="modal6" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="../img/d hand/" class="img-fluid" alt="Fuji Tiara">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--Footer-->
     <footer class="bg-black text-white text-center py-3">
         <div class="container-md">
             <p>&copy; 2023 Viva Film. All rights reserved.</p>
-            <p>Designed by Your Name</p>
+            <p>Designed with love</p>
         </div>
     </footer>
 
