--- a/html/cameraslenses.html
+++ b/html/cameraslenses.html
@@ -29,6 +29,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="../html/cameraslenses.html">Cameras & lenses</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="html/secondhand.html">Second hand</a>
+                    </li>
                 </ul>
             </div>
         </div>
