--- a/html/secondhand.html
+++ b/html/secondhand.html
@@ -226,7 +226,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <img src="../img/d hand/" class="img-fluid" alt="Fuji Tiara">
+                <img src="../img/d hand/fuji tiara.jpeg" class="img-fluid" alt="Fuji Tiara">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
