--- a/html/inspiration.html
+++ b/html/inspiration.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Film examples</a>
+                        <a class="nav-link text-white" href="inspiration.html">Film examples</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="contact.html">Contact</a>
