--- a/html/cameraslenses.html
+++ b/html/cameraslenses.html
@@ -30,7 +30,7 @@
                         <a class="nav-link text-white" href="../html/cameraslenses.html">Cameras & lenses</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="html/secondhand.html">Second hand</a>
+                        <a class="nav-link text-white" href="../html/secondhand.html">Second hand</a>
                     </li>
                 </ul>
             </div>
