--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
 
             <div class="col-md-4 col-sm-6">
                 <div class="card h-100 border-0">
+                    <a href="html/secondhand.html">
                     <div class="card-body">
-                        <p class="card-text">Second hand cameras</p>
+                     <p class="card-text">Second hand cameras</p>
                     </div>
+                </a>
                 </div>
             </div>
 
