--- a/html/inspiration.html
+++ b/html/inspiration.html
@@ -60,7 +60,13 @@
                 <option value="Fuji Film 400H">Fuji Film 400H</option>
                 <option value="Fuji superia 200">Fuji superia 200</option>
                 <option value="Ilford Delta 400">Ilford Delta 400</option>
-                <option value="Kodak Gold 400">Kodak Gold 400</option>
+                <option value="Kodak Portra 160">Kodak Portra 160</option>
+                <option value="Kodak Portra 800">Kodak Portra 800</option>
+                <option value="Kodak Ektar">Kodak Ektar</option>
+                <option value="Kodak Tx400">Kodak Tx400</option>
+                <option value="Kodak Ultramax">Kodak Ultramax</option>
+                <option value="Cine still 800T">Cine still 800T</option>
+
 
 
 
